Creating service for update user in database!!
